--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="img/logoico.ico" type="image/x-icon" />
     <title>ELm</title>
   </head>
   <body>
@@ -13,16 +14,20 @@
         <div class="headerBox">
           <div class="headerContent">
             <div class="logo">
-              <img src="src/img/logoELmlarge3.gif" alt="logo" />
+              <img src="img/logo2.png" alt="logo" />
             </div>
             <div class="menuBox">
               <ul class="menuContent">
                 <li>
-                  <span class="menuItem">About</span>
+                  <span class="menuItem active"
+                    ><a href="index.html">About</a></span
+                  >
                 </li>
 
                 <li>
-                  <span class="menuItem">Experience</span>
+                  <span class="menuItem"
+                    ><a href="experience.html">Experience</a></span
+                  >
                 </li>
                 <li>
                   <span class="menuItem">Work</span>
@@ -37,7 +42,39 @@
             </div>
           </div>
         </div>
-        <div class="main"></div>
+        <div class="main">
+          <h1>test</h1>
+          <p>
+            fortmfgfortmfgfortmfgfortmfgv Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Accusamus laborum placeat alias qui
+            delectus! Debitis expedita atque error fuga illo! Sapiente aut
+            similique dolorem velit! Eos facilis similique quo saepe? Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Quas, tenetur
+            quam! Nam, voluptatum excepturi at et reiciendis blanditiis esse
+            labore laborum repudiandae laboriosam ducimus eveniet iure? Ipsam,
+            eos voluptates! Qui. Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Est, distinctio beatae? Quia omnis esse possimus
+            tempora, sint nulla doloribus debitis nemo neque quo nobis quaerat
+            corporis dignissimos dolor quas harum. Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Possimus quasi doloribus nemo, ipsum
+            porro tenetur sit. Deserunt debitis error repellat eligendi sed vero
+            optio, eos, reprehenderit, officiis quam fuga aspernatur. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Eligendi esse
+            vitae culpa vero libero quas rem beatae ducimus suscipit fuga
+            exercitationem, quam vel aliquid necessitatibus sunt? Aspernatur
+            quasi ut repellendus. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Quod a laboriosam dolore quidem eligendi ipsum
+            magnam amet officiis libero, corporis ratione aliquam hic saepe
+            blanditiis, laudantium nemo. Quos, dolorum culpa! Lorem ipsum dolor
+            sit amet, consectetur adipisicing elit. Nobis sunt consequatur eius
+            nesciunt debitis. Natus suscipit cupiditate debitis error dicta
+            inventore, alias voluptatum non eligendi, nulla ut necessitatibus!
+            Qui, optio! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Eligendi officiis est, eius debitis dolorum numquam maxime
+            repudiandae minus pariatur sunt aliquid iusto harum iure, eum nemo?
+            Id magnam dicta nostrum.
+          </p>
+        </div>
         <div class="footerBox"></div>
       </div>
     </div>
